Try to avoid overlapping bot registration calls (#160)

--- a/tools/halite-in-a-box/src/index.scss
+++ b/tools/halite-in-a-box/src/index.scss
@@ -10,3 +10,13 @@ body {
 .error {
     color: red;
 }
+
+fieldset {
+    border: 0.1rem solid #d1d1d1;
+    border-radius: 5px;
+    padding: 0 1em;
+}
+
+th {
+    font-weight: bold;
+}
